--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@azure/msal-browser": "^2.22.1",
     "@azure/msal-react": "^1.3.1",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +14,7 @@
     "react-bootstrap": "^2.2.3",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
