--- a/web.config
+++ b/web.config
@@ -17,6 +17,20 @@
         <add value="index.js" />
       </files>
     </defaultDocument>
+
+    <rewrite> 
+      <rules> 
+        <rule name="React Routes" stopProcessing="true"> 
+        <match url=".*" /> 
+        <conditions logicalGrouping="MatchAll"> 
+          <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" /> 
+          <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" /> 
+          <add input="{REQUEST_URI}" pattern="^/(api)" negate="true" /> 
+        </conditions> 
+        <action type="Rewrite" url="/" /> 
+        </rule> 
+      </rules> 
+    </rewrite>
     
   </system.webServer>
 </configuration>
