--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "body-parser": "^1.20.0",
     "bootstrap": "^5.1.3",
+    "express": "^4.18.1",
+    "mssql": "^8.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.3",
     "react-burger-menu": "^3.0.6",
@@ -17,6 +20,7 @@
     "react-redux": "^8.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "tedious": "^14.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
